[gd_scene load_steps=19 format=3 uid="uid://bmafffcarojsq"]

[ext_resource type="Script" path="res://Scripts/print.gd" id="1_t1psh"]
[ext_resource type="Texture2D" uid="uid://c1a07canohjxf" path="res://Assets/Anderes/Sub-Found.png" id="1_v27ud"]
[ext_resource type="Script" path="res://Scripts/map.gd" id="2_pmsod"]
[ext_resource type="Script" path="res://Scripts/camera.gd" id="3_37iuq"]
[ext_resource type="Theme" uid="uid://dj32msjjeg33q" path="res://Assets/Anderes/Theme.tres" id="4_yi8w6"]
[ext_resource type="Script" path="res://Scripts/Menu.gd" id="5_8hfqu"]
[ext_resource type="Texture2D" uid="uid://wwiydl0vwgb7" path="res://Assets/Anderes/Ramen.png" id="7_c5o0u"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_h4i4w"]
texture = ExtResource("1_v27ud")
texture_region_size = Vector2i(34, 34)
use_texture_padding = false
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_kjn6e"]
tile_size = Vector2i(34, 34)
sources/1 = SubResource("TileSetAtlasSource_h4i4w")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kkly7"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="InputEventKey" id="InputEventKey_hlk7m"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_rxux2"]
events = [SubResource("InputEventKey_hlk7m")]

[sub_resource type="InputEventKey" id="InputEventKey_xwaj0"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_p6qyl"]
events = [SubResource("InputEventKey_xwaj0")]

[sub_resource type="InputEventKey" id="InputEventKey_qslbn"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_1vblq"]
events = [SubResource("InputEventKey_qslbn")]

[sub_resource type="InputEventKey" id="InputEventKey_6xvbw"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_j3prm"]
events = [SubResource("InputEventKey_6xvbw")]

[node name="Print" type="Node2D"]
script = ExtResource("1_t1psh")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
z_index = -1
tile_set = SubResource("TileSet_kjn6e")
script = ExtResource("2_pmsod")
height = 200
breite = 200

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("3_37iuq")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LabelDings" type="PanelContainer" parent="CanvasLayer"]
visible = false
offset_top = 503.0
offset_right = 113.0
offset_bottom = 535.0
theme = ExtResource("4_yi8w6")

[node name="Menu Name" type="Label" parent="CanvasLayer/LabelDings"]
layout_mode = 2
theme = ExtResource("4_yi8w6")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_kkly7")
text = "Main Menu"

[node name="Container" type="PanelContainer" parent="CanvasLayer"]
visible = false
offset_top = 535.0
offset_right = 1152.0
offset_bottom = 648.0
theme = ExtResource("4_yi8w6")
script = ExtResource("5_8hfqu")

[node name="Main" type="GridContainer" parent="CanvasLayer/Container"]
layout_mode = 2
columns = 8

[node name="Back_men" type="Button" parent="CanvasLayer/Container/Main"]
layout_mode = 2
size_flags_horizontal = 3
shortcut = SubResource("Shortcut_rxux2")
shortcut_in_tooltip = false
text = "Back"

[node name="Production" type="Button" parent="CanvasLayer/Container/Main"]
layout_mode = 2
size_flags_horizontal = 3
text = "Production"

[node name="Logistic" type="Button" parent="CanvasLayer/Container/Main"]
layout_mode = 2
size_flags_horizontal = 3
text = "Logistic"

[node name="Text" type="Button" parent="CanvasLayer/Container/Main"]
layout_mode = 2
size_flags_horizontal = 3
text = "Text"

[node name="Production" type="GridContainer" parent="CanvasLayer/Container"]
visible = false
layout_mode = 2
columns = 8

[node name="Back" type="Button" parent="CanvasLayer/Container/Production"]
layout_mode = 2
size_flags_horizontal = 3
shortcut = SubResource("Shortcut_p6qyl")
shortcut_in_tooltip = false
text = "Back"

[node name="Constructor" type="Button" parent="CanvasLayer/Container/Production"]
layout_mode = 2
size_flags_horizontal = 3
text = "Constructor"

[node name="Smelter" type="Button" parent="CanvasLayer/Container/Production"]
layout_mode = 2
size_flags_horizontal = 3
text = "Smelter"

[node name="Foundry" type="Button" parent="CanvasLayer/Container/Production"]
layout_mode = 2
size_flags_horizontal = 3
text = "Foundry"

[node name="Logistic" type="GridContainer" parent="CanvasLayer/Container"]
visible = false
layout_mode = 2
columns = 8

[node name="Back_log" type="Button" parent="CanvasLayer/Container/Logistic"]
layout_mode = 2
size_flags_horizontal = 3
shortcut = SubResource("Shortcut_1vblq")
shortcut_in_tooltip = false
text = "Back"

[node name="Belt" type="Button" parent="CanvasLayer/Container/Logistic"]
layout_mode = 2
size_flags_horizontal = 3
text = "Belt"

[node name="Pipe" type="Button" parent="CanvasLayer/Container/Logistic"]
layout_mode = 2
size_flags_horizontal = 3
text = "Pipe"

[node name="Splitter" type="Button" parent="CanvasLayer/Container/Logistic"]
layout_mode = 2
size_flags_horizontal = 3
text = "Splitter"

[node name="Menu" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = 292.0
offset_right = -483.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_yi8w6")
shortcut = SubResource("Shortcut_j3prm")
shortcut_in_tooltip = false
text = "Menu"

[node name="fps" type="Label" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 23.0

[node name="del_ramen" type="TextureRect" parent="CanvasLayer"]
visible = false
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("7_c5o0u")
expand_mode = 1

[connection signal="pressed" from="CanvasLayer/Container/Main/Back_men" to="CanvasLayer/Container" method="_on_back_men_pressed"]
[connection signal="pressed" from="CanvasLayer/Container/Main/Production" to="CanvasLayer/Container" method="_on_production_pressed"]
[connection signal="pressed" from="CanvasLayer/Container/Main/Logistic" to="CanvasLayer/Container" method="_on_logistic_pressed"]
[connection signal="pressed" from="CanvasLayer/Container/Production/Back" to="CanvasLayer/Container" method="_on_back_pressed"]
[connection signal="pressed" from="CanvasLayer/Container/Production/Constructor" to="." method="_on_constructor_pressed"]
[connection signal="pressed" from="CanvasLayer/Container/Production/Smelter" to="." method="_on_smelter_pressed"]
[connection signal="pressed" from="CanvasLayer/Container/Production/Foundry" to="." method="_on_foundry_pressed"]
[connection signal="pressed" from="CanvasLayer/Container/Logistic/Back_log" to="CanvasLayer/Container" method="_on_back_log_pressed"]
[connection signal="pressed" from="CanvasLayer/Container/Logistic/Belt" to="." method="_on_belt_pressed"]
[connection signal="pressed" from="CanvasLayer/Container/Logistic/Pipe" to="." method="_on_pipe_pressed"]
[connection signal="pressed" from="CanvasLayer/Container/Logistic/Splitter" to="." method="_on_splitter_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu" to="CanvasLayer/Container" method="_on_menu_pressed"]
